--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-select": "^5.3.1",
     "react-sortablejs": "^6.1.1",
     "sortablejs": "^1.15.0",
@@ -33,6 +33,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
