--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ENVIRONMENT='development'
+BASE_URL="http://localhost:8080"
 PORT=8080
 DB_HOST="mongodb://172.17.0.2:27017/tasktodo"
 JWT_SECRET="jwt test"
