--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node --es-module-specifier-resolution=node server.js"
+    "start": "nodemon --es-module-specifier-resolution=node server.js"
   },
   "keywords": [
     "mern",
@@ -22,7 +22,8 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "mongoose-autopopulate": "^0.16.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
